source/develop/release-management/releases/3.3.3/testing.html.md
---
title: oVirt 3.3.3 testing
authors: bproffitt, gianluca, sandrobonazzola
wiki_title: Testing/Ovirt 3.3.3 testing
wiki_revision_count: 3
wiki_last_updated: 2014-01-16
---

# oVirt 3.3.3 testing

## What to do as a participant

*   Look at [OVirt_3.3_TestDay](/develop/release-management/releases/3.3/testday/) for understanding what should be tested
*   Update the Participants section.
*   Run into any issues? Report it on IRC, user mailing list, or bugzilla.

## Participants

Test Days are open to anyone.

If you have your own setup, we will provide all the software packages and the required information.

If you're willing to participate, please add yourself to the table below:

| Name            | part tested                                               | Storage         | Networking | Distribution | Bugs |
|-----------------|-----------------------------------------------------------|-----------------|------------|--------------|------|
| Gianluca Cecchi | Update infra from 3.3.2 to 3.3.3beta1 without VM downtime | GlusterFS 3.4.2 | -          | Fedora 19    | -    |
